	* [multipathd] move checkers from sg_io on BLK onto CHR
	  readsector0 goes from read to sg_read
	* [multipathd] rely on sysfs for failedpaths enum and no
	  longer on the device mapper
	* [multipathd] convert get_lun_strings from ioctl to sysfs
	  so we can benefit from strings persistency for failed
	  paths
	* [multipath] readconfig() to take only 8 char from vendor
	  string (ake)
	* [multipath] remove unecessery and wrong getuid == NULL
	  check from devinfo() (ake)
	* [multipathd] make readsector0 open path O_DIRECT
	* [multipathd] sizeof(path) -> sizeof(struct path) (MikeC)
	* [Makefile] don't try to install and uninstall libs
	* [devmap_name] kill the wrong trailing '\n'
	  (Mike Christie)
	* [kpartx] works with device nodes outside /dev
	* [kpartx] correctly display the delimiter in partition
	  name outputs
2004-05-17 multipath-tools-0.2.0
	* change the default klibc by greg's :
	  corrects the segfaults reported by Ling Hwa Hing
2004-05-16 multipath-tools-0.1.9
	* break free from udev : package klibc and libsysfs
	* add a spec file and a "make rpm" rule
	* pensum on klibc changes needed :
		* mmap.c & fork.c : invert includes
		* make clean wipes .*.d
		* auto create the linux symlink
		* remove tools and specfiles (files and Makefile
		  targets)
2004-05-15 multipath-tools-0.1.8
	* Makefiles cleanup and factorisation
	* Compilation fixes for non-ix86 archs, tested on x86_64
	* strip execs harder for a 10% size reduction
	* blacklist /dev/fd* and /dev/loop*
	* dmadm works with sysfs nodes with '!' (cciss for ex)
2004-05-10 multipath-tools-0.1.7
	* bugfixes from	Andy <genanr@emsphone.com> :
		* read the last line of the config file
		* add an entry for the 3PARData storage ctlrs
		* read the last char of vendor and model strings
2004-04-25 multipath-tools-0.1.6
	* add the dmadm WIP tool (read MD superblocks and create
	  corresponding devmaps when possible)
	* plug fd leak in TUR path checker
2004-03-25 multipath-tools-0.1.5